--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "react": "^17.0.1",
     "react-admin": "^3.11.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
     "simple-react-validator": "^1.6.0",
     "web-vitals": "^0.2.4"
   },
